# FAIRSCORE-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
fairscore/: __init__.py  app.py  cli.py  config.py  theme.py
fairscore/data/: __init__.py  features.py  generator.py
fairscore/explainability/: __init__.py  shap_explainer.py
fairscore/models/: __init__.py  ensemble.py  expense_discipline.py  income_stability.py  liquidity_buffer.py  risk_anomaly.py  trainer.py
fairscore/parser/: __init__.py  pdf_parser.py
fairscore/ui/: __init__.py  dashboard.py  input_mode.py  model_matrix.py  score_gauge.py
models/: __init__.py  income_stability_model.pkl  liquidity_buffer_model.pkl  liquidity_buffer_scaler.pkl  risk_anomaly_model.pkl  risk_anomaly_scaler.pkl
outputs/: fair_scores_20260128_162201_bda6132a.csv  score_result_20260128_163956_06487789.txt  training_metrics_20260128_162205_2c5f072a.json
